# trpl

./: README.md
adder/src/: lib.rs
book/: README.md
book/guessing_game/src/: main.rs
book/loops/src/: main.rs
book/rectangles/src/: main.rs
book/restaurant/src/: lib.rs
book/structs/src/: main.rs
book/variables/src/: main.rs
branches/src/: main.rs
enums/src/: main.rs
functions/src/: main.rs
hello/src/: lib.rs  main.rs
hello_cargo/: Makefile
hello_world/: Makefile
minigrep/src/: lib.rs
restaurant/src/front_of_house/: serving.rs
zero2prod/: Cargo.toml  Makefile  README.md  configuration.yaml
zero2prod/scripts/: init_db.sh
zero2prod/src/: main.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs
